--- a/src/containerStyles.css
+++ b/src/containerStyles.css
@@ -27,6 +27,7 @@
   left: 0;
   width: 100%;
   z-index: 1000;
+  display: block;
 }
 
 .light-background .button-container {
@@ -41,8 +42,8 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: rgb(17, 17, 17);
-  border: 1px solid rgb(24, 24, 24);
+  background-color: rgb(30, 30, 30);
+  border: 1px solid rgb(50, 50, 50);
   background-image: url(../assets/power.svg);
   background-size: 75px 75px;
   background-repeat: no-repeat;
@@ -50,7 +51,6 @@
 }
 
 .button-container .zebralight-button:active {
-  background-color: rgb(17, 17, 17);
   box-shadow: inset 0px 0px 20px rgb(5, 5, 5);
   border: none;
 }
@@ -72,6 +72,10 @@
   background-color: rgba(0, 0, 0, 0.3);
   padding: 8px;
   border-radius: 4px;
+}
+
+.information-container .information-box.expanded {
+  min-height: 350px;
 }
 
 .information-box .top-section {
@@ -97,6 +101,38 @@
   margin: auto;
 }
 
+.information-box .expand-collapse-button {
+  font-size: 12pt;
+  cursor: pointer;
+}
+
+.information-box .mode-grid {
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2px;
+  margin: 4px auto;
+}
+
+.mode-grid .cell {
+  background-color: rgba(50, 50, 50);
+  font-size: 8pt;
+  padding: 2px;
+}
+
+.mode-grid .cell.active {
+  background-color: white;
+  color: black;
+}
+
+.mode-grid .cell:nth-child(1) {
+  grid-column: 1 / 3;
+}
+
+.mode-grid .cell:nth-child(2) {
+  grid-column: 3 / 5;
+}
+
 .centered-in-container {
   position: absolute;
   top: 50%;
@@ -112,6 +148,26 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.up-caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin: 0 4px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid white;
+}
+
+.down-caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin: 0 4px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid white;
 }
 
 button:focus {
